h2 line height fixed on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,7 @@
+h2 {
+  line-height: 1.2;
+}
+
 #main-nav .logo {
   float: none;
   text-align: center;
